--- a/style-about.css
+++ b/style-about.css
@@ -13,7 +13,7 @@ html {
 .second-page {
   background: rgb(56 50 50 / 80%) url(about2.jpg);
   background-size: cover;
-  background-blend-mode: darken;
+  background-blend-mode: lighten;
   background-position: center;
 }
 .logo {
